5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4160/executions/1723_2505.log
== TEST (2019-05-09 23:15:05) 
-- CODE:
from math import *
x = eval(input("Angulo: "))
k = int(input("Numero de termos: "))

soma = 0
i = 0
fim = k - 1
while (i <= fim):
	soma = soma + 1 / factorial(i)
	i = i + 1 
	print(round(soma,10))
	
-- OUTPUT:
1.0
2.0
2.5
2.6666666667
2.7083333333
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 11:14:17) 
-- CODE:
from math import *
x = eval(input("Angulo: "))
k = int(input("Numero de termos: "))

soma = 0
i = 0
fim = k - 1

while (i <= fim):
	soma = soma + (x**i) - ((x)**(i+1) / factorial(i))
	i = i + 1 
	print(round(soma,10))
	
-- OUTPUT:
-0.5707963268
-1.4674011003
-0.9378922925
1.9232142609
7.6128193193
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 11:14:32) 
-- CODE:
from math import *
x = eval(input("Angulo: "))
k = int(input("Numero de termos: "))

soma = 0
i = 0
fim = k - 1

while (i <= fim):
	soma = soma + (x**i) - ((x)**(i+1) / factorial(i))
	i = i + 1 
	print(round(soma,10))
	
-- OUTPUT:
-0.5707963268
-1.4674011003
-0.9378922925
1.9232142609
7.6128193193
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 11:14:50) 
-- CODE:
from math import *
x = eval(input("Angulo: "))
k = int(input("Numero de termos: "))

soma = 0
i = 0
fim = k - 1

while (i <= fim):
	soma = soma + (x**i) - ((x)**(i+1) / factorial(i))
	i = i + 1 
print(round(soma,10))
	
-- OUTPUT:
7.6128193193
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 11:14:53) 
-- CODE:
from math import *
x = eval(input("Angulo: "))
k = int(input("Numero de termos: "))

soma = 0
i = 0
fim = k - 1

while (i <= fim):
	soma = soma + (x**i) - ((x)**(i+1) / factorial(i))
	i = i + 1 
print(round(soma,10))
	
-- OUTPUT:
7.6128193193
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 11:15:16) 
-- CODE:
from math import *
x = eval(input("Angulo: "))
k = int(input("Numero de termos: "))

soma = 0
i = 0
fim = k - 1

while (i <= fim):
	soma = soma - (x**i) - ((x)**(i+1) / factorial(i))
	i = i + 1 
print(round(soma,10))
	
-- OUTPUT:
-22.3912810842
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 11:15:36) 
-- CODE:
from math import *
x = eval(input("Angulo: "))
k = int(input("Numero de termos: "))

soma = 0
i = 0
fim = k - 1

while (i <= fim):
	soma = soma - (x**i) - ((x)**(i-1) / factorial(i))
	i = i + 1 
print(round(soma,10))
	
-- OUTPUT:
-17.9967926786
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 11:15:46) 
-- CODE:
from math import *
x = eval(input("Angulo: "))
k = int(input("Numero de termos: "))

soma = 0
i = 0
fim = k - 1

while (i <= fim):
	soma = soma + (x**i) - ((x)**(i-1) / factorial(i))
	i = i + 1 
print(round(soma,10))
	
-- OUTPUT:
12.0073077249
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 11:16:18) 
-- CODE:
from math import *
x = eval(input("Angulo: "))
k = int(input("Numero de termos: "))

soma = 0
i = 0
fim = k - 1

while (i <= fim):
	soma = (soma + (x**i) - (x)**(i-1)) / factorial(i)
	i = i + 1 
print(round(soma,10))
	
-- OUTPUT:
0.108315804
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 11:16:46) 
-- CODE:
from math import *
x = eval(input("Angulo: "))
k = int(input("Numero de termos: "))

soma = 0
i = 0
fim = k - 1

while (i <= fim):
	soma = (soma + (x**i) - (x)**(i-1)) / factorial(i)
	i = i - 1 
print(round(soma,10))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    soma = (soma + (x**i) - (x)**(i-1)) / factorial(i)
ValueError: factorial() not defined for negative values
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 11:16:47) 
-- CODE:
from math import *
x = eval(input("Angulo: "))
k = int(input("Numero de termos: "))

soma = 0
i = 0
fim = k - 1

while (i <= fim):
	soma = (soma + (x**i) - (x)**(i-1)) / factorial(i)
	i = i - 1 
print(round(soma,10))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    soma = (soma + (x**i) - (x)**(i-1)) / factorial(i)
ValueError: factorial() not defined for negative values
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 11:16:47) 
-- CODE:
from math import *
x = eval(input("Angulo: "))
k = int(input("Numero de termos: "))

soma = 0
i = 0
fim = k - 1

while (i <= fim):
	soma = (soma + (x**i) - (x)**(i-1)) / factorial(i)
	i = i - 1 
print(round(soma,10))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    soma = (soma + (x**i) - (x)**(i-1)) / factorial(i)
ValueError: factorial() not defined for negative values
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 11:17:04) 
-- CODE:
from math import *
x = eval(input("Angulo: "))
k = int(input("Numero de termos: "))

soma = 0
i = 0
fim = k - 1

while (i <= fim):
	soma = (soma + (x**i) + (x)**(i-1)) / factorial(i)
	i = i - 1 
print(round(soma,10))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    soma = (soma + (x**i) + (x)**(i-1)) / factorial(i)
ValueError: factorial() not defined for negative values
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 11:17:18) 
-- CODE:
from math import *
x = eval(input("Angulo: "))
k = int(input("Numero de termos: "))

soma = 0
i = 0
fim = k - 1

while (i <= fim):
	soma = (soma + (x**i) + (x)**(i-1)) / factorial(i)
	i = i + 1 
print(round(soma,10))
	
-- OUTPUT:
0.4878410354
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 11:21:53) 
-- CODE:
from math import *
x = eval(input("Angulo: "))
k = int(input("Numero de termos: "))

soma = 0
i = 0
fim = k - 1

while (i <= fim):
	soma = (soma + (x**i) - (x)**(i-1)) / factorial(i)
	i = i + 1 
print(round(soma,10))
	
-- OUTPUT:
0.108315804
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 11:22:35) 
-- CODE:
from math import *
x = eval(input("Angulo: "))
k = int(input("Numero de termos: "))

soma = 0
i = 0
fim = k - 1

while (i <= fim):
	soma = (soma + (x**i) - (x)**(i-1)) / factorial(i)
	h= sin(soma)
	i = i + 1 
print(round(h,10))
	
-- OUTPUT:
0.1081041291
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 11:26:58) 
-- CODE:
from math import *
x = eval(input("Angulo: "))
k = int(input("Numero de termos: "))

soma = 0
i = 0
fim = k - 1

while (i <= fim):
	soma = (soma + (x**i) - (x)**(i-1)) / factorial(i)
	h= sin(soma)
	i = i + 1 
print(round(h,10))
	
-- OUTPUT:
0.1081041291
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 11:28:56) 
-- CODE:
from math import *
x = eval(input("Angulo: "))
k = int(input("Numero de termos: "))

soma = 0
i = 0
fim = k - 1

while (i <= fim):
	soma = (soma + (x**i) - (x)**(i-1)) / factorial(i)
	h= sin(soma)
	i = i + 1 
print(round(h,10))
	
-- OUTPUT:
0.1081041291
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 11:30:31) 
-- CODE:
from math import *
x = eval(input("Angulo: "))
k = int(input("Numero de termos: "))

soma = 0
i = 0
fim = k - 1

while (i <= fim):
	soma = soma + ((x**i) - (x)**(i+1)) / factorial(i)  
	h= sin(soma)
	i = i + 1 
print(round(h,10))
	
-- OUTPUT:
-0.4408022572
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 11:30:39) 
-- CODE:
from math import *
x = eval(input("Angulo: "))
k = int(input("Numero de termos: "))

soma = 0
i = 0
fim = k - 1

while (i <= fim):
	soma = soma + ((x**i) - (x)**(i+1)) / factorial(i)  
	h= sin(soma)
	i = i + 1 
print(round(h,10))
	
-- OUTPUT:
-0.4408022572
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 11:32:32) 
-- CODE:
from math import *
x = eval(input("Angulo: "))
k = int(input("Numero de termos: "))

soma = 0
i = 0
fim = k - 1

while (i <= fim):
	soma = soma + ((x**i) - (x)**(i+1)) / factorial(i)  
	h= sin(soma)
	i = i + 1 
print(round(h,10))
	
-- OUTPUT:
-0.4408022572
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 11:34:20) 
-- CODE:
from math import *
x = eval(input("Angulo: "))
k = int(input("Numero de termos: "))

soma = 0
i = 0
fim = k - 1

while (i <= fim):
	soma = soma + ((x**i) - (x)**(i%2!=0)) / factorial(i)  
	h= sin(soma)
	i = i + 1 
print(round(h,10))
	
-- OUTPUT:
0.9711169147
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 11:34:43) 
-- CODE:
from math import *
x = eval(input("Angulo: "))
k = int(input("Numero de termos: "))

soma = 0
i = 0
fim = k - 1

while (i <= fim):
	soma = (soma + (x**i) - (x)**(i%2!=0)) / factorial(i)  
	h= sin(soma)
	i = i + 1 
print(round(h,10))
	
-- OUTPUT:
0.2309995049
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 11:35:42) 
-- CODE:
from math import *
x = eval(input("Angulo: "))
k = int(input("Numero de termos: "))

soma = 0
i = 0
fim = k - 1

while (i <= fim):
	soma = soma + ((x**i) - (x)**(i%2!=0)) / factorial(i%2!=0)  
	h= sin(soma)
	i = i + 1 
print(round(h,10))
	
-- OUTPUT:
0.5348417207
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-11 11:35:56) 
-- CODE:
from math import *
x = eval(input("Angulo: "))
k = int(input("Numero de termos: "))

soma = 0
i = 0
fim = k - 1

while (i <= fim):
	soma = soma + ((x**i) - (x)**(i%2!=0)) / factorial(i%2!=0)  
	h= sin(soma)
	i = i + 1 
print(round(h,10))
	
-- EXECUTION TIME:
0.206575
-- TEST CASE 1:
---- input:
pi/2
5
---- correct output:
1.0000035426
---- user output:
0.5348417207
-- TEST CASE 2:
---- input:
-pi/2
4
---- correct output:
-0.9998431014
---- user output:
-0.7430304716
-- TEST CASE 3:
---- input:
pi/3
3
---- correct output:
0.8662952838
---- user output:
0.0964724373
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 11:36:41) 
-- CODE:
from math import *
x = eval(input("Angulo: "))
k = int(input("Numero de termos: "))

soma = 0
i = 0
fim = k - 1

while (i <= fim):
	soma = soma + ((x)**(i%2!=0) - (x)**(i%2!=0)) / factorial(i%2!=0)  
	h= sin(soma)
	i = i + 1 
print(round(h,10))
	
-- OUTPUT:
0.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 11:37:12) 
-- CODE:
from math import *
x = eval(input("Angulo: "))
k = int(input("Numero de termos: "))

soma = 0
i = 0
fim = k - 1

while (i <= fim):
	soma = soma + ((x)**(i) - (x)**(i%2!=0)) / factorial(i%2!=0)  
	h= sin(soma)
	i = i + 1 
print(round(h,10))
	
-- OUTPUT:
0.5348417207
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 11:38:36) 
-- CODE:
from math import *
x = eval(input("Angulo: "))
k = int(input("Numero de termos: "))

soma = 0
i = 0
fim = k - 1

while (i <= fim):
	soma = soma + ((x)**(i)/ factorial(i) - (x)**(i%2!=0)) / factorial(i%2!=0)  
	h= sin(soma)
	i = i + 1 
print(round(h,10))
	
-- OUTPUT:
-0.9911241627
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 11:39:00) 
-- CODE:
from math import *
x = eval(input("Angulo: "))
k = int(input("Numero de termos: "))

soma = 0
i = 0
fim = k - 1

while (i <= fim):
	soma = soma + ((x)**(i) - (x)**(i%2!=0)) / factorial(i%2!=0)  
	h= sin(soma)
	i = i + 1 
print(round(h,10))
	
-- OUTPUT:
0.5348417207
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 12:25:28) 
-- CODE:
from math import *
x = eval(input("Angulo: "))
k = int(input("Numero de termos: "))

soma = 0
i = 0
fim = k - 1

while (i <= fim):
	soma = soma + ((x)**(i) - (x)**(i%2!=0)) / factorial(i%2!=0)  
	
	i = i + 1 
print(round(sin(soma),10))
	
-- OUTPUT:
0.5348417207
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 12:26:16) 
-- CODE:
from math import *
x = eval(input("Angulo: "))
k = int(input("Numero de termos: "))

soma = 0
i = 0
fim = k - 1

while (i <= fim):
	soma = soma + ((x)**(i) - (x)**(i%2!=0)) / factorial(i%2!=0)  
	i = i + 1 % 2
print(round(sin(soma),10))
	
-- OUTPUT:
0.5348417207
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 12:26:32) 
-- CODE:
from math import *
x = eval(input("Angulo: "))
k = int(input("Numero de termos: "))

soma = 0
i = 0
fim = k - 1

while (i <= fim):
	soma = soma + ((x)**(i) - (x)**(i%2!=0)) / factorial(i%2!=0)  
	i = i + 1 % 2
print(round(sin(soma),10))
	
-- OUTPUT:
0.5348417207
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 12:27:43) 
-- CODE:
from math import *
x = eval(input("Angulo: "))
k = int(input("Numero de termos: "))

soma = 0
i = 0
fim = k - 1

while (i <= fim):
	soma = soma + ((x)**(i) - (x)**(i%2!=0)) / factorial(i%2!=0)  
	i = i + 1 
	h = sin(soma)
print(round(h,10))
	
-- OUTPUT:
0.5348417207
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:08:04) 
-- CODE:
from math import *
x = eval(input("Angulo: "))
k = int(input("Numero de termos: "))

soma = 0
i = 0
 
while (i < k ):
	soma = soma + ((x)**(2*i+1) - (x)**(2*i+1) / factorial(2*i+1)  
	i = i + 1 
print(round(h,10))
	
-- ERROR:
File "XXXX", line 10
    i = i + 1 
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:08:21) 
-- CODE:
from math import *
x = eval(input("Angulo: "))
k = int(input("Numero de termos: "))

soma = 0
i = 0
 
while (i < k ):
	soma = soma + ((x)**(2*i+1) - (x)**(2*i+1) / factorial(2*i+1)  
	i = i + 1 
print(round(soma,10))
	
-- ERROR:
File "XXXX", line 10
    i = i + 1 
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:08:30) 
-- CODE:
from math import *
x = eval(input("Angulo: "))
k = int(input("Numero de termos: "))

soma = 0
i = 0
 
while (i < k ):
	soma = soma + (x)**(2*i+1) - (x)**(2*i+1) / factorial(2*i+1)  
	i = i + 1 
print(round(soma,10))
	
-- OUTPUT:
94.5253387931
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:08:57) 
-- CODE:
from math import *
x = eval(input("Angulo: "))
k = int(input("Numero de termos: "))

soma = 0
i = 0
 
while (i < k ):
	soma = soma + (x)**(2*i+1) - (x)**(2*i+1) / factorial(2*i+1)  
	i = i + 1 
print(round(sin(soma),10))
	
-- OUTPUT:
0.2740090696
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:09:21) 
-- CODE:
from math import *
x = eval(input("Angulo: "))
k = int(input("Numero de termos: "))

soma = 0
i = 0
 
while (i < k ):
	soma = soma + (x)**i - (x)**(2*i+1) / factorial(2*i+1)  
	i = i + 1 
print(round(sin(soma),10))
	
-- OUTPUT:
0.1339802287
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:09:50) 
-- CODE:
from math import *
x = eval(input("Angulo: "))
k = int(input("Numero de termos: "))

soma = 0
i = 0
 
while (i < k ):
	soma = soma - (x)**(2*i+1) / factorial(2*i+1)  
	i = i + 1 
print(round(sin(soma),10))
	
-- OUTPUT:
-0.7448415956
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:10:57) 
-- CODE:
from math import *
x = eval(input("Angulo: "))
k = int(input("Numero de termos: "))

soma = 0
i = 0
 
while (i < k ):
	soma = soma - (x)**(2*i+1) / factorial(2*i+1)  
	i = i + 1 
print(round(sin(soma),10))
	
-- OUTPUT:
-0.7448415956
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:12:04) 
-- CODE:
from math import *
x = eval(input("Angulo: "))
k = int(input("Numero de termos: "))

soma = 0
i = 0
 
while (i < k ):
	soma = soma + (-1)*(x)**(2*i+1) / factorial(2*i+1)  
	i = i + 1 
print(round(sin(soma),10))
	
-- OUTPUT:
-0.7448415956
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:12:09) 
-- CODE:
from math import *
x = eval(input("Angulo: "))
k = int(input("Numero de termos: "))

soma = 0
i = 0
 
while (i < k ):
	soma = soma + (-1)*(x)**(2*i+1) / factorial(2*i+1)  
	i = i + 1 
print(round(sin(soma),10))
	
-- OUTPUT:
-0.7448415956
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:12:21) 
-- CODE:
from math import *
x = eval(input("Angulo: "))
k = int(input("Numero de termos: "))

soma = 0
i = 0
 
while (i < k ):
	soma = soma + (-1**i)*(x)**(2*i+1) / factorial(2*i+1)  
	i = i + 1 
print(round(sin(soma),10))
	
-- OUTPUT:
-0.7448415956
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:12:58) 
-- CODE:
from math import *
x = eval(input("Angulo: "))
k = int(input("Numero de termos: "))

soma = 0
i = 0
 
while (i < k ):
	soma = soma + (-1)**i*(x)**(2*i+1) / factorial(2*i+1)  
	i = i + 1 
print(round(sin(soma),10))
	
-- OUTPUT:
0.8414728989
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 10:13:00) 
-- CODE:
from math import *
x = eval(input("Angulo: "))
k = int(input("Numero de termos: "))

soma = 0
i = 0
 
while (i < k ):
	soma = soma + (-1)**i*(x)**(2*i+1) / factorial(2*i+1)  
	i = i + 1 
print(round(sin(soma),10))
	
-- EXECUTION TIME:
0.168073
-- TEST CASE 1:
---- input:
pi/2
5
---- correct output:
1.0000035426
---- user output:
0.8414728989
-- TEST CASE 2:
---- input:
-pi/2
4
---- correct output:
-0.9998431014
---- user output:
-0.8413862018
-- TEST CASE 3:
---- input:
pi/3
3
---- correct output:
0.8662952838
---- user output:
0.761934798
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:13:03) 
-- CODE:
from math import *
x = eval(input("Angulo: "))
k = int(input("Numero de termos: "))

soma = 0
i = 0
 
while (i < k ):
	soma = soma + (-1)**i*(x)**(2*i+1) / factorial(2*i+1)  
	i = i + 1 
print(round(sin(soma),10))
	
-- OUTPUT:
0.8414728989
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:13:48) 
-- CODE:
from math import *
x = eval(input("Angulo: "))
k = int(input("Numero de termos: "))

soma = 0
i = 0
 
while (i < k ):
	soma = soma + (-1)**i * (x)**(2*i+1) / factorial(2*i+1)  
	i = i + 1 
print(round(soma),10)
	
-- OUTPUT:
1 10
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 10:13:50) 
-- CODE:
from math import *
x = eval(input("Angulo: "))
k = int(input("Numero de termos: "))

soma = 0
i = 0
 
while (i < k ):
	soma = soma + (-1)**i * (x)**(2*i+1) / factorial(2*i+1)  
	i = i + 1 
print(round(soma),10)
	
-- EXECUTION TIME:
0.176887
-- TEST CASE 1:
---- input:
pi/2
5
---- correct output:
1.0000035426
---- user output:
1 10
-- TEST CASE 2:
---- input:
-pi/2
4
---- correct output:
-0.9998431014
---- user output:
-1 10
-- TEST CASE 3:
---- input:
pi/3
3
---- correct output:
0.8662952838
---- user output:
1 10
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 10:13:53) 
-- CODE:
from math import *
x = eval(input("Angulo: "))
k = int(input("Numero de termos: "))

soma = 0
i = 0
 
while (i < k ):
	soma = soma + (-1)**i * (x)**(2*i+1) / factorial(2*i+1)  
	i = i + 1 
print(round(soma),10)
	
-- EXECUTION TIME:
0.113026
-- TEST CASE 1:
---- input:
pi/2
5
---- correct output:
1.0000035426
---- user output:
1 10
-- TEST CASE 2:
---- input:
-pi/2
4
---- correct output:
-0.9998431014
---- user output:
-1 10
-- TEST CASE 3:
---- input:
pi/3
3
---- correct output:
0.8662952838
---- user output:
1 10
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:13:53) 
-- CODE:
from math import *
x = eval(input("Angulo: "))
k = int(input("Numero de termos: "))

soma = 0
i = 0
 
while (i < k ):
	soma = soma + (-1)**i * (x)**(2*i+1) / factorial(2*i+1)  
	i = i + 1 
print(round(soma),10)
	
-- OUTPUT:
1 10
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:14:16) 
-- CODE:
from math import *
x = eval(input("Angulo: "))
k = int(input("Numero de termos: "))

soma = 0
i = 0
 
while (i < k ):
	soma = (soma + (-1)**i * (x)**(2*i+1)) / factorial(2*i+1)  
	i = i + 1 
print(round(soma,10))
	
-- OUTPUT:
0.0001604283
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:14:31) 
-- CODE:
from math import *
x = eval(input("Angulo: "))
k = int(input("Numero de termos: "))

soma = 0
i = 0
 
while (i < k ):
	soma = soma + ((-1)**i * (x)**(2*i+1)) / factorial(2*i+1)  
	i = i + 1 
print(round(soma,10))
	
-- OUTPUT:
1.0000035426
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 10:14:36) 
-- CODE:
from math import *
x = eval(input("Angulo: "))
k = int(input("Numero de termos: "))

soma = 0
i = 0
 
while (i < k ):
	soma = soma + ((-1)**i * (x)**(2*i+1)) / factorial(2*i+1)  
	i = i + 1 
print(round(soma,10))
	
-- EXECUTION TIME:
0.139872
-- TEST CASE 1:
---- input:
pi/2
5
---- correct output:
1.0000035426
---- user output:
1.0000035426
-- TEST CASE 2:
---- input:
-pi/2
4
---- correct output:
-0.9998431014
---- user output:
-0.9998431014
-- TEST CASE 3:
---- input:
pi/3
3
---- correct output:
0.8662952838
---- user output:
0.8662952838
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
